--- a/app/src/main/res/layout/activity_view_task.xml
+++ b/app/src/main/res/layout/activity_view_task.xml
@@ -6,32 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".ViewTask">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="424dp"
-        android:layout_height="72dp"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-12dp"
-        tools:layout_editor_absoluteY="0dp">
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="424dp"-->
+        <!--android:layout_height="72dp"-->
+        <!--app:popupTheme="@style/ToolbarTheme"-->
+        <!--tools:ignore="MissingConstraints"-->
+        <!--tools:layout_editor_absoluteX="-12dp"-->
+        <!--tools:layout_editor_absoluteY="0dp">-->
 
-        <TextView
-            android:id="@+id/toolbar_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:fontFamily="@font/roboto_thin"
-            android:paddingBottom="10dp"
-            android:text="Tasks"
-            android:textColor="@color/titleTask"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="165dp"
-            tools:layout_editor_absoluteY="1dp" />
+        <!--<TextView-->
+            <!--android:id="@+id/toolbar_title"-->
+            <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="start"-->
+            <!--android:fontFamily="@font/roboto_thin"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:text="Tasks"-->
+            <!--android:textColor="@color/titleTask"-->
+            <!--android:textSize="36sp"-->
+            <!--android:textStyle="bold"-->
+            <!--tools:ignore="MissingConstraints"-->
+            <!--tools:layout_editor_absoluteX="165dp"-->
+            <!--tools:layout_editor_absoluteY="1dp" />-->
 
-    </android.support.v7.widget.Toolbar>
+    <!--</android.support.v7.widget.Toolbar>-->
 
     <TextView
         android:id="@+id/textView"
