--- a/app/src/main/res/menu/newmenu.xml
+++ b/app/src/main/res/menu/newmenu.xml
@@ -13,5 +13,6 @@
         android:id="@+id/searchButton"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="Search"
-        app:actionViewClass="android.widget.SearchView" />
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom" />
 </menu>
