--- a/app/src/main/res/layout/edit_deialog.xml
+++ b/app/src/main/res/layout/edit_deialog.xml
@@ -9,39 +9,46 @@
 
 
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="46dp"
-    android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="109dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
             android:text="Task Name:"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/editTextSource"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        <EditText
+            android:id="@+id/editTextSource"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
 
 
-</LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="25dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="109dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
             android:text="Priority:"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -51,8 +58,7 @@
             android:layout_width="295dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
 
     </LinearLayout>
