--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#FFE9D6">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/delete_item"
-        />
+        android:title="Delete task" />
 
 </menu>
